frontend/tests/cases/negative/unique/uniqueFunction.gr.output
Type checking failed: 
Type error: frontend/tests/cases/negative/unique/uniqueFunction.gr:5:53:
Expected `()` but got `!b0`